@@ -1,6 +1,3 @@
-2922 / 2926 / 2925
-2927
-2931
 2937 / 2803
 2940
 2942
@@ -24,6 +21,10 @@
 - usprawnic widok FK w comboboxie zeby nie bylo 3 kolumn z tym samym id
 - sqlcipher
 - poprawic tablemodifier i viewmodifier, zeby nie sprawialy tylu problemow
+
+cannot reproduce:
+2922 / 2926 / 2925
+2927
 
 feature requests:
 3070
